Reducing network size

--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNdUW0s3gnpEdLG1UDYvHAO",
+      "authorship_tag": "ABX9TyP/Fdg72LuCuumdNsKiBWZH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -683,6 +683,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zTjaEz7tWwjP",
+        "colab_type": "text"
+      },
+      "source": [
+        "* revisit code snippet as it is pseudo code"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "pSHVXmauKeh3",
@@ -722,6 +732,72 @@
       },
       "source": [
         "The smaller network starts overfitting later than the reference network, and its performance degrads more slowly once it starts overfitting."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tZRfPN5DXDld",
+        "colab_type": "text"
+      },
+      "source": [
+        "For comparison we can explore a bigger network and see how it compares to the reference network."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qhn_1sYNXUa_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model = model.Sequential()\n",
+        "model.add(layers.Dense(512, activation='relu', input_shape=(10000,)))\n",
+        "model.add(layers.Dense(512, activation='relu'))\n",
+        "model.add(layers.Dense(1, activation='sigmoid'))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_8jOYccGe-Yl",
+        "colab_type": "text"
+      },
+      "source": [
+        "The bigger network starts overfitting, after just one epoch or iteration, additionally overfits severly along with having noisy validation loss."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4wbTArxdfg96",
+        "colab_type": "text"
+      },
+      "source": [
+        "As expected the bigger network minimizes validation loss to zero quickly as a result of it's higher capacity and ability to memorize the training data."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PUUqf-xFgDTj",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.4.2  Adding weight regularization "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6TS81ro1gP7v",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
