--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP/Fdg72LuCuumdNsKiBWZH",
+      "authorship_tag": "ABX9TyN30Up53lA+wtAcqMQ6rAzg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -797,8 +797,104 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "*Occam's razor* applies to the models learned by neural networks: given some training data and a network architecture, multiple sets of weight values could explain the data. Simpler models are less to overfit than complex ones."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pLwyum8gjEU9",
+        "colab_type": "text"
+      },
+      "source": [
+        "A *simple model* in this context is a model where the distribution of parameter values has less entropy. Thus a common way to mitigate overfitting is to put constraints on the complexity of a network by forcing its weights to take only small values, which makes the distributio of weight values more *regular*. Also referred to as *weight regularization*, and it's done by adding to the loss function of the network a *cost* associated with having large weights. Two different costs:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ru9GoLAXkSut",
+        "colab_type": "text"
+      },
+      "source": [
+        "* L1 *regularization*-- The cost added is proportional to the *absolute value of the weight coefficients* (the L1 *norm* of the weights)\n",
+        "* L2 *regularization*-- The cost added is proportional to the *square of the value of the weight coefficients* (the L2 *norm* of the weights). L2 regularization is also called *weight decay* in the context of neural networks."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7NfJymWNllsX",
+        "colab_type": "text"
+      },
+      "source": [
+        "In Keras, weight regularization is added by passing *weight regularizer instances* to layers as keyword arguments."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ut4O4ccemL0C",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from keras import regularizers\n",
+        "model = models.Sequential()\n",
+        "model.add(layers.Dense(16, kernel_regularizer=regularizers.l2(0.001),\n",
+        "                       activation='relu', input_shape=(10000,)))\n",
+        "model.add(layers.Dense(16, kernel_regularizer=regularizers.l2(0.001),\n",
+        "                       activation='relu'))\n",
+        "model.add(layers.Dense(1, activation='sigmoid'))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UO0xT99rnyHo",
+        "colab_type": "text"
+      },
+      "source": [
+        "l2(0.001) means every coefficient in the weight matrix of the layer will add 0.001 * weight_coefficient_value to the total loss of the network. Note that because this penalty is *only added at training time,* the loss for this network will be much higher at training than at test time."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "T0K88SFGocSg",
+        "colab_type": "text"
+      },
+      "source": [
+        "A model with L2 regularization has become much more resistant to overfitting than the reference model, even though both models have the same number of parameters."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DdaDafM4phvb",
+        "colab_type": "text"
+      },
+      "source": [
+        "Alternatively, we can use one of the following Keras weight regularizers."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2u981CCvqazd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from keras import regularizers \n",
+        "\n",
+        "regularizers.l1(0.001)\n",
+        "regularizers.l1_l2(l1=0.001, l2=0.001)"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
