--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN30Up53lA+wtAcqMQ6rAzg",
+      "authorship_tag": "ABX9TyMgK8mgGmLmff3sF4Hy3quz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -895,6 +895,186 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OaPSLx-c8Elz",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.4.3 Adding dropout"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5uD7PIMy8JpM",
+        "colab_type": "text"
+      },
+      "source": [
+        "*Dropout* is one of the most effective and most commonly used regularization techniques for neural networks, developed by Geoff Hinton. Dropout, applied to a layer, consists of randomly *dropping out*(setting to zero) a number of output features of the layer during training. Let's say a given layer would normally return a vector [0.2, 0.5, 1.3, 0.8, 1.1] for a given input sample during training. After applying dropout, this vector will have a few zero entries distributed at random: for example, [0,0.5,1.3,0,1.1]. The *dropout rate* is the fraction of the features that are zeroed out; it's usually set between 0.2 and 0.5. At test time, no units are dropped out; instead, the layer's output values are scaled down by a factor equal to the dropuout rate, to balance for the fact that more units are active than at training time."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dTrV5EJ-Xj60",
+        "colab_type": "text"
+      },
+      "source": [
+        "Consider a Numpy matrix containing the output of a layer, layer_output, of shape (batch_size, features). At training time, we zero out at random a fraction of the values in the matrix:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TGcEFHfcYC-P",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "layer_output *= np.random.randint(0, high=2, size=layer_output.shape)\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YPGSnzT0YSsj",
+        "colab_type": "text"
+      },
+      "source": [
+        "At test time, we scale down the output by the dropout rate. Here, we scale by 0.5:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CT7X_1DjYito",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "layer_output *= 0.5\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_saOiqSyY7Yc",
+        "colab_type": "text"
+      },
+      "source": [
+        "Note that this process can be implemented by doing both operations at training time and leaving the output unchanged at test time, which is often the way it's implemented in practice:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4-ZkBgJVZL3p",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "layer_output *= np.random.randint(0, high=2, size=layer_output.shape)\n",
+        "layer_output /= 0.5\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nQ4jprYgZreu",
+        "colab_type": "text"
+      },
+      "source": [
+        "The core idea of dropout is introducing noise in the output values of a layer can break up happenstance patterns that aren't significant, which the network will start memorizing if no noise is present."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5mx2dkweaQWH",
+        "colab_type": "text"
+      },
+      "source": [
+        "In Keras, you can introduce dropout in a network via the Dropout layer, which is applied to the output of the layer right before it:\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nAkUxC3panpI",
+        "colab_type": "text"
+      },
+      "source": [
+        "```\n",
+        "model.add(layers.Dropout(0.5))\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "I8OYb7suaxCN",
+        "colab_type": "text"
+      },
+      "source": [
+        "Code snippet of adding two Dropout layers in the IMDB network."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2R4nOQkQa4nh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model = models.Sequential()\n",
+        "model.add(layers.Dense(16, activation='relu', input_shae(10000,)))\n",
+        "model.add(layers.Dropout(0.5))\n",
+        "model.add(layers.Dense(16, activation='relu'))\n",
+        "model.add(layers.Dropout(0.5))\n",
+        "model.add(layers.Dense(1, activation='sigmoid'))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cyCzLsZwbf-o",
+        "colab_type": "text"
+      },
+      "source": [
+        "Recap of ways to prevent overfitting in neural networks:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wxfVvOIEboWR",
+        "colab_type": "text"
+      },
+      "source": [
+        "* Get more training data.\n",
+        "* Reduce the capacity of the network.\n",
+        "* Add weight regularization.\n",
+        "* Add dropout."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7bE5wjEub0hQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.5 The universal workflow of machine learning"
+      ]
     }
   ]
 }
