--- a/Chapter3_Getting_started_with_neural_networks.ipynb
+++ b/Chapter3_Getting_started_with_neural_networks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter3_Getting_started_with_neural_networks.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNsP3eQF2wT0UqFLsAPcCz/",
+      "authorship_tag": "ABX9TyNoQmF5yUZKBmKv2u2wbDbt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2994,6 +2994,33 @@
         "* When features in the input data have values in different ranges, each feature should be scaled independently as a preprocessing step.\n",
         "* When there is little data available, using K-fold validation is a great way to reliably evaluate a model.\n",
         "* When little training data is available, it's preferable to use a small network with few hidden layers, in order to avoid severe overfitting."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "naZdRxiSc73j",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Chapter summary"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6aQVJlxmc_fu",
+        "colab_type": "text"
+      },
+      "source": [
+        "* Now able to handle the most common kinds of machine-learning tasks on vector data: binary classification, multiclass classification, and scalar regression.\n",
+        "* Preprocessing raw data before feeding it into a neural network is typically a necessity.\n",
+        "* When your data has feature with different ranges, scale each feature independently as part of preprocessing.\n",
+        "* As training progresses, neural networks eventually begin to overfit and obtain worse results on never-before-seen data.\n",
+        "* If you don't have much training data, use a small network with only one or two hidden layers, to avoid severe overfitting.\n",
+        "* If your data is divided into many categories, you may cause information bottlenecks if you make the intermediate layers too small.\n",
+        "* Regression uses different loss functions and different evaluation metrics than classification.\n",
+        "* When you're working with little data, K-fold validation can help reliably evaluate your model."
       ]
     }
   ]
