Defining the problem

--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMgK8mgGmLmff3sF4Hy3quz",
+      "authorship_tag": "ABX9TyM4LwAJRJoSyTrpTZ9t2nge",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1074,6 +1074,99 @@
       },
       "source": [
         "#4.5 The universal workflow of machine learning"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KpOIR6pLoLXb",
+        "colab_type": "text"
+      },
+      "source": [
+        "In this section, we'll present a universal blueprint that you can use to attack and solve any machine-learning problem."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7ewhquxboXex",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.5.1 Defining the problem and assembling a dataset"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KDsNlIijoexZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "First, you must define the problem at hand:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XWnf9DJfokYj",
+        "colab_type": "text"
+      },
+      "source": [
+        "* What will your input data be? What are you trying to predict? You can only learn to predict something if you have available training data: for example, you can only learn to classify the sentiment of movie reviews if you have both reviews and sentiment annotations available. As such, data availability is usually the limiting factor at this stage.\n",
+        "\n",
+        "* What type of problem are you facing? Is it a binary classification? Multiclass classifciation? Scalar regression? Vector regression? Multiclass, multilablel classification? Something else, like clustering, generation, or reinforcement learning? Identifying the problem type will guide your choice of model architecture, loss function, and so on."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lW9VybEOqGSm",
+        "colab_type": "text"
+      },
+      "source": [
+        "You can't move to the next stage until you know what your inputs and outputs are, and what data you'll use. Be aware of the hypotheses you make at this stage:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QIt2v3ltqWum",
+        "colab_type": "text"
+      },
+      "source": [
+        "* You hypothesize that your outputs can be predicted given your inputs. \n",
+        "* You hypotheszie that your available data is sufficiently informative to learn the relationship between inputs and outputs. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-iX2FqZqq6ks",
+        "colab_type": "text"
+      },
+      "source": [
+        "Until you have a working model, these are merely hypotheses, waiting to be validated or invalidated. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rbBDHcxJrHPl",
+        "colab_type": "text"
+      },
+      "source": [
+        "One class of unsolvable problems you should be aware of is *nonstationary problems* These are problems where the data is either cyclical or seasonal."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sVGyf4-krsvd",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.5.2 Choosing a measure of success "
       ]
     }
   ]
