--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM4LwAJRJoSyTrpTZ9t2nge",
+      "authorship_tag": "ABX9TyPKt7irQ11ZzB1P5FfQ1exZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1167,6 +1167,26 @@
       },
       "source": [
         "#4.5.2 Choosing a measure of success "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "y3rrFjjbtuqV",
+        "colab_type": "text"
+      },
+      "source": [
+        "To control something, you need to be able to observe it. To acheive success, you must define what you mean by success-- accuracy? Precision and recall? Customer-retention rate? Your metric for success will guide the choice of a loss function: what your model will optimize. It should directly align with your higher-level goals, such as the success of your business. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jHlNppCsumhZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "For balanced-classification problems, where every class is equally likely, accuracy and *area under the receiver operation characteristic curve* (ROC AUC) are common metrics. For class-imbalanced you can use precision and recall. For ranking problems or multilabel classifications, you use mean average precison."
       ]
     }
   ]
