more section headings

--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPKt7irQ11ZzB1P5FfQ1exZ",
+      "authorship_tag": "ABX9TyNg+/47tflW5GMIGLZMjzt7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1187,6 +1187,36 @@
       },
       "source": [
         "For balanced-classification problems, where every class is equally likely, accuracy and *area under the receiver operation characteristic curve* (ROC AUC) are common metrics. For class-imbalanced you can use precision and recall. For ranking problems or multilabel classifications, you use mean average precison."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Kt_WWSvhhcCf",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.5.3 Deciding on an evaluation protocol"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6kJ_xmrwhzOi",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.5.4 Preparing your data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XKYGcjrEiIrD",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.5.5 Developing a model that does better than a baseline"
       ]
     }
   ]
