--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNg+/47tflW5GMIGLZMjzt7",
+      "authorship_tag": "ABX9TyO5l3hQDP1ZZffLMwGbI0b7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1217,6 +1217,16 @@
       },
       "source": [
         "#4.5.5 Developing a model that does better than a baseline"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f9CZEuWbhA-Q",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Chapter summary"
       ]
     }
   ]
