--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO5l3hQDP1ZZffLMwGbI0b7",
+      "authorship_tag": "ABX9TyNxIYzIJf8BWhZSlKsTFsEG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1197,6 +1197,28 @@
       },
       "source": [
         "#4.5.3 Deciding on an evaluation protocol"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nmcHV5vz6qub",
+        "colab_type": "text"
+      },
+      "source": [
+        "Once you know what you're aiming for, you must establish how you'll measure your current progress. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qY7nUFYh643B",
+        "colab_type": "text"
+      },
+      "source": [
+        "* *Maintaining a hold-out validation set* -- The way to go when you have plenty of data\n",
+        "* *Doing K-fold cross-validation* -- The right choice when you have too few samples for hold-out validation to be reliable\n",
+        "* *Doing iterated K-fold validation* -- For performing highly accurate model evaluation when little data is available"
       ]
     },
     {
