--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNxIYzIJf8BWhZSlKsTFsEG",
+      "authorship_tag": "ABX9TyOW73vdoKP1doh6IIIaKztJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1229,6 +1229,39 @@
       },
       "source": [
         "#4.5.4 Preparing your data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BW_jnvfO92qn",
+        "colab_type": "text"
+      },
+      "source": [
+        "Once you know what you're training on, what you're optimizing for, and how to evaluate your approach, you're almost readyd to begin training models. But first, you should format your data in a way that can be fed into a machien-learning model--here, we'll assume a deep neural network:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q2riYclH-q-T",
+        "colab_type": "text"
+      },
+      "source": [
+        "* Your data should be formatted as tensors.\n",
+        "* The values taken by these tensors should usually be scaled to small values: for example, in the [-1,1] range or [0,1] range.\n",
+        "* If different features take values in different ranges, then the data should be normalized.\n",
+        "* You may want to do some feature engineering, especially for small-data problems."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ujs0O3wG_ZUG",
+        "colab_type": "text"
+      },
+      "source": [
+        "Once your tensors of input data and target data are ready, you can begin to train models."
       ]
     },
     {
