model better than a baseline

--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOW73vdoKP1doh6IIIaKztJ",
+      "authorship_tag": "ABX9TyPpwLf+8MRwgfrHPIyOzwK2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1272,6 +1272,97 @@
       },
       "source": [
         "#4.5.5 Developing a model that does better than a baseline"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yFHqdz6qBELT",
+        "colab_type": "text"
+      },
+      "source": [
+        "Your goal at this stage is to acheive *statistical power*: that is, to develop a small model that is capable of beating a dumb baseline. In the MNIST digit-classification example, anything that acheives an accuracy greater than 0.1 can be said to have statistical power; in the IMDB example, it's anything with an accuracy greater than 0.5."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xE6eHSgACV21",
+        "colab_type": "text"
+      },
+      "source": [
+        "Note that it's not always to possible to acheive statistical power. If you can't beat a random baseline after trying multiple reasonable architectures, it may be that the answer to the question you're asking isn't present in the input data. Remember that you make two hypotheses:\n",
+        "\n",
+        "* You hypothesize that your outputs can be predicted given your inputs.\n",
+        "* You hypothesize that the available data is sufficiently informative to learn the relationship between inputs and outputs. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bfRotIRaFq44",
+        "colab_type": "text"
+      },
+      "source": [
+        "It may well be that these hypotheses are false, in which case you must go back to the drawing board."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uhcwUyU7GQ_x",
+        "colab_type": "text"
+      },
+      "source": [
+        "The three key choices to build your working model:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OhARCLf9GYEX",
+        "colab_type": "text"
+      },
+      "source": [
+        "* *Last-layer activation* -- This establishes useful constraints on the network's output.\n",
+        "* *Loss function* -- This should match the type of problem you're trying to solve.\n",
+        "* *Optimization configuration* -- What optimizer will you use? What will its learning rate be? In most cases, it's safe to go with rmsprop and its default learning rate."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "R_oCvifmHWgQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "Regarding the choice of a loss function, note that it isn't always possible to directly optimize for the metric that measures success on a problem. Sometimes there is no easy way to turn a metric into a loss function; loss functions, after all, need to be computable given only a mini-batch of data(ideally, a loss function should be computable for as little as a single data point) and must be differentiable."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Mv8eFn9bJHp_",
+        "colab_type": "text"
+      },
+      "source": [
+        "| Problem type                            | Last-layer activation | Loss function              |\n",
+        "|-----------------------------------------|-----------------------|----------------------------|\n",
+        "| Binary classification                   | sigmoid               | binary_crossentropy        |\n",
+        "| Multiclass, single-label classification | softmax               | categorical_crossentropy   |\n",
+        "| Multiclass, multilabel classification   | sigmoid               | binary_crossentropy        |\n",
+        "| Regression to arbitrary values          | None                  | mse                        |\n",
+        "| Regression to values between 0 and 1    | sigmoid               | mse or binary_crossentropy |"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jYPUmhQKKTZQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.5.6 Scaling up: developing a model that overfits"
       ]
     },
     {
