--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPpwLf+8MRwgfrHPIyOzwK2",
+      "authorship_tag": "ABX9TyO2UmcZDYhMsQXvEu2FUb8u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1363,6 +1363,48 @@
       },
       "source": [
         "#4.5.6 Scaling up: developing a model that overfits"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s7z1W4eUL9Gh",
+        "colab_type": "text"
+      },
+      "source": [
+        "Once you've obtained a model that has statistical power, the question becomes, is your model sufficiently powerful?  Does it have enough layers and parameters to properly model the problem at hand? "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nZADP8gZNEC0",
+        "colab_type": "text"
+      },
+      "source": [
+        "To figure out how big a model you'll need, you must develop a model that overfits. This is fairly easy:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D5KgWfyUNRZo",
+        "colab_type": "text"
+      },
+      "source": [
+        "1. Add layers.\n",
+        "2. Make the layers bigger.\n",
+        "3. Train for more epochs."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hfR7-lZ6NkCg",
+        "colab_type": "text"
+      },
+      "source": [
+        "Always monitor the training loss and validation loss, as well as the training and validation values for any metrics you care about. When you see that the model's performance on the validation data begins to degrade, you've acheived overfitting."
       ]
     },
     {
