--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO2UmcZDYhMsQXvEu2FUb8u",
+      "authorship_tag": "ABX9TyMzB2kOG/fAPYvjMqA1E5n7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1405,6 +1405,51 @@
       },
       "source": [
         "Always monitor the training loss and validation loss, as well as the training and validation values for any metrics you care about. When you see that the model's performance on the validation data begins to degrade, you've acheived overfitting."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LB0UQwLgOlhB",
+        "colab_type": "text"
+      },
+      "source": [
+        "#4.5.7 Regularizing your model and tuning your hyperparameters"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9GR7mP71Ou2f",
+        "colab_type": "text"
+      },
+      "source": [
+        "This step will take the most time: you'll repeatedly modify your model, train it, evaluate on your validation data repeat, until the model is as it can get. Try the following:\n",
+        "* Add dropout.\n",
+        "* Try different architectures: add or remove layers.\n",
+        "* Add L1 and/or L2 regularization\n",
+        "* Try different hyperparameters to find the optimal configuration.\n",
+        "* Optionally, iterate on feature engineering: add new features, or remove features that don't seem to be informative."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "00mQvaiDV7Vz",
+        "colab_type": "text"
+      },
+      "source": [
+        "Be mindful of overtuning the model during the validation process as you leak information information. As well as overfitting during the validation process."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tO789C13WNf1",
+        "colab_type": "text"
+      },
+      "source": [
+        "Once you've devloped a satisfactory model configuration, you can train your final production model on all the available data and evaluate it one last time on the test set."
       ]
     },
     {
