--- a/Chapter_4Fundamentalsofmachinelearning.ipynb
+++ b/Chapter_4Fundamentalsofmachinelearning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter_4Fundamentalsofmachinelearning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMzB2kOG/fAPYvjMqA1E5n7",
+      "authorship_tag": "ABX9TyPSfwb3IQ7/q/E2joR8UX8l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1460,6 +1460,21 @@
       },
       "source": [
         "# Chapter summary"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vjFbjzfzYW3F",
+        "colab_type": "text"
+      },
+      "source": [
+        "* Define the problem at hand and the data on which you'll train. Collect this data, or annotate it with labels if need be.\n",
+        "* Choose how you'll measure success on your problem. Which metrics will you monitor on your validation data?\n",
+        "* Determine your evaluation protocol: hold-out validation? K-fold validation? Which portion of the data should you use for validation?\n",
+        "* Develop a first model that does better than a basic baseline: a model with statistical power.\n",
+        "* Develop a model that overfits. \n",
+        "* Regularize your model and tune its hyperparameters, based on performance on the validation data. A lot of machine-learning research tends to focus only on this step--but keep the big picture in mind. "
       ]
     }
   ]
